testsuite/tests/type-data/should_run/T22315b.hs
{-# LANGUAGE TypeData #-}
module T22315b where

data TermLevel = Mk
type data TypeLevel = Mk

mk = Mk

type Mk2 = Mk
