testsuite/tests/type-data/should_fail/TDStrictnessGADT.hs
{-# LANGUAGE TypeData #-}
module TDStrictnessGADT where

type data T a where
     Cons :: !a -> T a
